tests/baselines/reference/restElementWithNullInitializer.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithNullInitializer.ts(7,15): error TS2461: Type '{ [x: number]: any; }' is not an array type.


==== tests/cases/conformance/es6/destructuring/restElementWithNullInitializer.ts (1 errors) ====
    function foo1([...r] = null) {
    }
    
    function foo2([...r] = undefined) {
    }
    
    function foo3([...r] = {}) {
                  ~~~~~~
!!! error TS2461: Type '{ [x: number]: any; }' is not an array type.
    }
    
    function foo4([...r] = []) {
    }
    